feat: comprehensive LSP ecosystem expansion with CI integration (#3)
* feat: implement Claude Code diagnostics hook system for real-time TypeScript error detection

This commit introduces a comprehensive hook system that provides immediate syntax error feedback during development by integrating LSP diagnostics with Claude Code's PostToolUse hooks.

Key components:

- LSP Client Improvements (src/lsp/client.ts):
  - Skip first diagnostic event for TypeScript server to avoid stale diagnostics
  - Clear diagnostic cache on file open to force fresh results
  - Implement event-driven diagnostic waiting using EventEmitter
  - Replace polling-based diagnostic checks with real-time event handling

- Hook Script (hooks/get-diagnostics.sh):
  - Extract file path from Claude Code tool input JSON
  - Run diagnostics only on TypeScript files using lspcli
  - Block file edits with exit code 2 when TypeScript errors are detected
  - Strip ANSI color codes for clean error output to stderr

- Claude Code Configuration (.claude/settings.json):
  - Configure PostToolUse hook for Edit, MultiEdit, and Write tools
  - Automatically trigger diagnostics check after file modifications

This system blocks file edits when TypeScript errors are detected, providing immediate feedback without requiring daemon restarts or manual diagnostic runs.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>

* fix: resolve inconsistent LSP diagnostic results and memory leaks

This commit addresses several critical issues that caused unreliable diagnostic results:

**Core Issue Fixed:**
- LSP servers (particularly Pyright) cache diagnostics and don't re-send them when files are reopened with identical content
- Added dummy textDocument/didChange notification after didOpen to force fresh diagnostic analysis

**Key Improvements:**
- Implemented stateless file handling by removing file tracking and version management
- Fixed memory leak in waitForDiagnostics b